--- a/projects/intl-elements/package.json
+++ b/projects/intl-elements/package.json
@@ -32,13 +32,13 @@
   },
   "devDependencies": {
     "elm": "^0.19.0-bugfix2",
-    "eslint": "^5.10.0",
-    "eslint-plugin-fp": "^2.3.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-ramda": "^2.5.1",
-    "http-server": "^0.11.1",
-    "rollup": "^0.67.4",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-node-resolve": "^4.0.0"
+    "eslint": ">=5.10.0",
+    "eslint-plugin-fp": ">=2.3.0",
+    "eslint-plugin-import": ">=2.14.0",
+    "eslint-plugin-ramda": ">=2.5.1",
+    "http-server": ">=0.11.1",
+    "rollup": ">=0.67.4",
+    "rollup-plugin-commonjs": ">=9.2.0",
+    "rollup-plugin-node-resolve": ">=4.0.0"
   }
 }
